bio section for persons

--- a/connectedafrica/static/style/style.less
+++ b/connectedafrica/static/style/style.less
@@ -241,12 +241,14 @@ li.active a {
   .details {
     padding-left: 8px;
     font-size: 14px;
-    color: rgb(51, 51, 51);
   }
 }
 
-#bio img:first-child {
-  width: 100%;
+#bio {
+  img:first-child {
+    width: 100%;
+    margin-bottom: 20px;
+  }
 }
 
 #sources {
