--- a/connectedafrica/static/style/style.less
+++ b/connectedafrica/static/style/style.less
@@ -104,7 +104,7 @@ body {
 
 h1, h2, h3, h4 {
   font-weight: 800;
-  t-ext-transform: uppercase;
+  text-transform: uppercase;
 }
 
 h3.teaser a {
@@ -230,17 +230,36 @@ li.active a {
 
 // Profiles
 
+.relations {
+  h3 {
+    margin-bottom: -15px;
+  }
+}
+
 .relation { 
-  margin-bottom: 16px;
+  margin-bottom: 20px;
 
   a {
-    padding-bottom: 8px;
     font-size: 16px;
     font-weight: bold;
+
+    .fa {
+      color: @text-color;
+    }
   }
   .details {
-    padding-left: 8px;
+    margin: 4px 0 0 32px;
     font-size: 14px;
+  }
+
+  .fa {
+    width: 16px;
+    display: inline-block;
+    text-align: center;
+  }
+
+  .fa-lg {
+    width: 32px;
   }
 }
 
