Move profile templates to a folder.

--- a/connectedafrica/templates/profile/organization.html
+++ b/connectedafrica/templates/profile/organization.html
@@ -1,4 +1,4 @@
-{% extends "profile_base.html" %}
+{% extends "profile/base.html" %}
 
 {% block basicinfo %}
 {% with major_schema=entity|major_schema %}
