--- a/connectedafrica/templates/profile/person.html
+++ b/connectedafrica/templates/profile/person.html
@@ -1,4 +1,4 @@
-{% extends "profile_base.html" %}
+{% extends "profile/base.html" %}
 
 {% block basicinfo %}
 {% if 'date_birth' in entity.properties %}
