--- a/connectedafrica/templates/layout.html
+++ b/connectedafrica/templates/layout.html
@@ -26,23 +26,33 @@
     <div id="pagewrapper">
       <div class="container">
         <nav class="navbar navbar-default navbar-static-top" role="navigation">
-          <a class="navbar-brand" href="/">{{APP_NAME}}</a>
-          <ul class="nav navbar-nav">
-            <li><a href="{{url_for('base.page', path='stories')}}">Stories</a></li>
-            <li><a href="{{url_for('browser.view')}}">Explore</a></li>
-            <li><a href="{{url_for('base.page', path='about')}}">About</a></li>
-          </ul>
-          <form class="navbar-form navbar-right" role="search"
-                action="{{url_for('browser.view')}}">
-            <div class="form-group">
-              <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-search"></i></span>
-                <input type="text" name="q" class="form-control"
-                  value="{{query}}" placeholder="Search">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-menu">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">{{APP_NAME}}</a>
+          </div>
+          <div class="collapse navbar-collapse" id="main-menu">
+            <ul class="nav navbar-nav">
+              <li><a href="{{url_for('base.page', path='stories')}}">Stories</a></li>
+              <li><a href="{{url_for('browser.view')}}">Explore</a></li>
+              <li><a href="{{url_for('base.page', path='about')}}">About</a></li>
+            </ul>
+            <form class="navbar-form navbar-right navbar-search" role="search"
+                  action="{{url_for('browser.view')}}">
+              <div class="form-group">
+                <div class="input-group">
+                  <span class="input-group-addon"><i class="fa fa-search"></i></span>
+                  <input type="text" name="q" class="form-control"
+                    value="{{query}}" placeholder="Search">
+                </div>
+                
               </div>
-              
-            </div>
-          </form>
+            </form>
+          </div>
         </nav>
         {% block content %}{% endblock %}
       </div>
@@ -51,14 +61,14 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-md-3 col-sm-6">
             <ul>
               <li><a href="{{url_for('base.page', path='about')}}">About {{APP_NAME}}</a></li>
               <li><a href="{{url_for('base.page', path='faq')}}">Frequently Asked Questions</a></li>
               <li><a href="{{url_for('base.page', path='contact')}}">Contact us</a></li>
             </ul>
           </div>
-          <div class="col-md-3 pull-right">
+          <div class="col-md-3 col-sm-6">
             <ul>
               <li><a href="https://github.com/CodeForAfrica/connectedAFRICA">Source code</a></li>
               <li>Powered by <a href="http://granoproject.org/">grano</a></li>
