--- a/connectedafrica/static/style/style.less
+++ b/connectedafrica/static/style/style.less
@@ -247,12 +247,12 @@ li.active a {
 
   .relations {
     h3 {
-      margin-bottom: -15px;
+      margin-bottom: -10px;
     }
   }
 
   .relation { 
-    margin-bottom: 20px;
+    m-argin-bottom: 20px;
 
     a {
       font-size: 16px;
@@ -282,7 +282,7 @@ li.active a {
     margin-bottom: 0;
     height: 10em;
     margin-right: 2em;
-    .grayscale-image;
+    //.grayscale-image;
     border-radius: 50%;
   }
 
