--- a/connectedafrica/static/style/style.less
+++ b/connectedafrica/static/style/style.less
@@ -1,6 +1,5 @@
 
 // Variables
-
 @theme1: #66B3A7;
 @theme2: #C0D4B6;
 @theme3: #EEF0BD;
@@ -12,68 +11,15 @@
 @dark-gray: #333;
 @text-color: @dark-gray;
 
-
 // Functional
-
 @footer-background: @dark-gray;
 @footer-foreground: @dark-gray;
 @header-background: white;
 @header-foreground: @theme-color;
 @body-background: white;
 
-// Core variables and mixins
-@import "../vendor/bootstrap/less/variables.less";
-@import "../vendor/bootstrap/less/mixins.less";
-
-@grid-float-breakpoint: @screen-desktop;
-@brand-primary: @theme-color;
-
-// Reset
-@import "../vendor/bootstrap/less/normalize.less";
-@import "../vendor/bootstrap/less/print.less";
-
-// Core CSS
-@import "../vendor/bootstrap/less/scaffolding.less";
-@import "../vendor/bootstrap/less/type.less";
-@import "../vendor/bootstrap/less/code.less";
-@import "../vendor/bootstrap/less/grid.less";
-@import "../vendor/bootstrap/less/tables.less";
-@import "../vendor/bootstrap/less/forms.less";
-@import "../vendor/bootstrap/less/buttons.less";
-
-// Components
-@import "../vendor/bootstrap/less/component-animations.less";
-// @import "../vendor/bootstrap/less/glyphicons.less";
-@import "../vendor/bootstrap/less/dropdowns.less";
-@import "../vendor/bootstrap/less/button-groups.less";
-@import "../vendor/bootstrap/less/input-groups.less";
-@import "../vendor/bootstrap/less/navs.less";
-@import "../vendor/bootstrap/less/navbar.less";
-// @import "../vendor/bootstrap/less/breadcrumbs.less";
-@import "../vendor/bootstrap/less/pagination.less";
-@import "../vendor/bootstrap/less/pager.less";
-@import "../vendor/bootstrap/less/labels.less";
-@import "../vendor/bootstrap/less/badges.less";
-@import "../vendor/bootstrap/less/jumbotron.less";
-// @import "../vendor/bootstrap/less/thumbnails.less";
-@import "../vendor/bootstrap/less/alerts.less";
-// @import "../vendor/bootstrap/less/progress-bars.less";
-@import "../vendor/bootstrap/less/media.less";
-@import "../vendor/bootstrap/less/list-group.less";
-@import "../vendor/bootstrap/less/panels.less";
-// @import "../vendor/bootstrap/less/wells.less";
-@import "../vendor/bootstrap/less/close.less";
-
-// Components w/ JavaScript
-// @import "../vendor/bootstrap/less/modals.less";
-// @import "../vendor/bootstrap/less/tooltip.less";
-// @import "../vendor/bootstrap/less/popovers.less";
-// @import "../vendor/bootstrap/less/carousel.less";
-
-// Utility classes
-@import "../vendor/bootstrap/less/utilities.less";
-@import "../vendor/bootstrap/less/responsive-utilities.less";
-
+// All bootstrap related styles
+@import "bootstrap.less";
 
 // Mixins
 .grayscale-image {
@@ -88,14 +34,15 @@
   max-width: 940px;
 }
 
-// Base layout 
+
+// Base layout
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   font-size: 1.5em;
   color: @text-color;
 
-  background: url(/static/images/pics/soweto.png) no-repeat center center fixed; 
+  background: url(/static/images/pics/soweto.png) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -132,6 +79,10 @@ a:hover {
 h3.teaser, .nav-tabs, .navbar, .list-group {
   .simple-links;
 }
+
+// New theme
+@import "theme.less";
+
 
 // Header style
 
@@ -198,7 +149,7 @@ li.active a {
   border: 0;
 }
 
-// Browser 
+// Browser
 
 .main-search {
   width: 100%;
@@ -218,7 +169,7 @@ li.active a {
   }
 }
 
-// Facets 
+// Facets
 
 .facets {
   li.active {
@@ -272,7 +223,7 @@ li.active a {
     }
   }
 
-  .relation { 
+  .relation {
     m-argin-bottom: 20px;
 
     a {
@@ -323,7 +274,7 @@ li.active a {
   }
 }
 
-// Responsive fixes. 
+// Responsive fixes.
 
 @media (max-width: @screen-xs-max) {
   footer {
