more templates modification

--- a/connectedafrica/templates/header.html
+++ b/connectedafrica/templates/header.html
@@ -1,4 +1,5 @@
-      <nav class="navbar navbar-default navbar-static-top" role="navigation">
+<div class="masthead">
+  <nav class="navbar navbar-default navbar-static-top" role="navigation">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-menu">
               <span class="sr-only">Toggle navigation</span>
@@ -27,3 +28,4 @@
             </form>
           </div>
         </nav>
+</div>
