Rename, “stories” to “themes”.

--- a/connectedafrica/templates/layout.html
+++ b/connectedafrica/templates/layout.html
@@ -37,7 +37,7 @@
           </div>
           <div class="collapse navbar-collapse" id="main-menu">
             <ul class="nav navbar-nav">
-              <li><a href="{{url_for('base.page', path='stories')}}">Stories</a></li>
+              <li><a href="{{url_for('base.page', path='themes')}}">Themes</a></li>
               <li><a href="{{url_for('browser.view')}}">Explore</a></li>
               <li><a href="{{url_for('base.page', path='about')}}">About</a></li>
             </ul>
