--- a/connectedafrica/static/style/style.less
+++ b/connectedafrica/static/style/style.less
@@ -25,7 +25,7 @@
 @import "../vendor/bootstrap/less/variables.less";
 @import "../vendor/bootstrap/less/mixins.less";
 
-@grid-float-breakpoint: @screen-desktop;
+// @grid-float-breakpoint: @screen-desktop;
 @brand-primary: @theme-color;
 
 // Reset
@@ -82,31 +82,28 @@
   filter: grayscale(100%);
 }
 
-
-.container-fixed, .jumbotron .container-fixed {
-  margin: 0 auto;
-  max-width: 940px;
-}
-
-// Base layout 
-
-body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 1.5em;
-  color: @text-color;
-
-  background: url(/static/images/pics/soweto.png) no-repeat center center fixed; 
+.cover-background {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
 
-.container {
+// Base layout 
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.5em;
+  color: @text-color;
+
+  background: url(/static/images/pics/soweto.png) no-repeat center center fixed; 
+  .cover-background();
+}
+
+.container-fluid {
   background-color: @body-background;
-  max-width: 1000px;
+  //max-width: 1000px;
   padding: 2em;
-  margin-top: 4em;
+  margin: 5% 10% 0 10%;
 }
 
 h1, h2, h3, h4 {
@@ -132,6 +129,29 @@ a:hover {
 h3.teaser, .nav-tabs, .navbar, .list-group {
   .simple-links;
 }
+
+// Responsive fixes. 
+
+@media (max-width: @screen-xs-max) {
+  footer {
+    .partners {
+      display: none;
+    }
+  }
+
+}
+
+@media (max-width: @screen-sm-max) {
+  .navbar-search {
+    display: none;
+  }
+
+  .container-fluid {
+    margin: 5% 0 0 0;
+    padding: 10px;
+  }
+}
+
 
 // Header style
 
@@ -323,25 +343,4 @@ li.active a {
   }
 }
 
-// Responsive fixes. 
-
-@media (max-width: @screen-xs-max) {
-  footer {
-    .partners {
-      display: none;
-    }
-  }
-
-}
-
-@media (max-width: @screen-sm-max) {
-  .navbar-search {
-    display: none;
-  }
-
-  .container {
-    margin-top: 25px;
-    padding: 10px;
-  }
-}
 
