--- a/connectedafrica/templates/layout.html
+++ b/connectedafrica/templates/layout.html
@@ -23,43 +23,40 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.png') }}">
   </head>
   <body>
-    <div id="pagewrapper">
-      <div class="container">
-        <nav class="navbar navbar-default navbar-static-top" role="navigation">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-menu">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">{{APP_NAME}}</a>
-          </div>
-          <div class="collapse navbar-collapse" id="main-menu">
-            <ul class="nav navbar-nav">
-              <li><a href="{{url_for('base.page', path='themes')}}">Themes</a></li>
-              <li><a href="{{url_for('browser.view')}}">Explore</a></li>
-              <li><a href="{{url_for('base.page', path='about')}}">About</a></li>
-            </ul>
-            <form class="navbar-form navbar-right navbar-search" role="search"
-                  action="{{url_for('browser.view')}}">
-              <div class="form-group">
-                <div class="input-group">
-                  <span class="input-group-addon"><i class="fa fa-search"></i></span>
-                  <input type="text" name="q" class="form-control"
-                    value="{{query}}" placeholder="Search">
-                </div>
-                
+    <div class="container-fluid">
+      <nav class="navbar navbar-default navbar-static-top" role="navigation">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-menu">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">{{APP_NAME}}</a>
+        </div>
+        <div class="collapse navbar-collapse" id="main-menu">
+          <ul class="nav navbar-nav">
+            <li><a href="{{url_for('base.page', path='themes')}}">Themes</a></li>
+            <li><a href="{{url_for('browser.view')}}">Explore</a></li>
+            <li><a href="{{url_for('base.page', path='about')}}">About</a></li>
+          </ul>
+          <form class="navbar-form navbar-right navbar-search" role="search"
+                action="{{url_for('browser.view')}}">
+            <div class="form-group">
+              <div class="input-group">
+                <span class="input-group-addon"><i class="fa fa-search"></i></span>
+                <input type="text" name="q" class="form-control"
+                  value="{{query}}" placeholder="Search">
               </div>
-            </form>
-          </div>
-        </nav>
-        {% block content %}{% endblock %}
-      </div>
+            </div>
+          </form>
+        </div>
+      </nav>
+      {% block content %}{% endblock %}
     </div>
 
     <footer>
-      <div class="container">
+      <div class="container-fluid">
         <div class="row">
           <div class="col-md-3 col-sm-6">
             <ul>
