--- a/connectedafrica/templates/layout.html
+++ b/connectedafrica/templates/layout.html
@@ -7,51 +7,31 @@
 
     <title>{% block title %}(Untitled){% endblock %} - {{APP_NAME}}</title>
     <meta name="description" content="{% block description %}{% endblock %}">
-    <meta name="keywords" content="{% block keywords %}{% endblock %}">
+    <meta name="keywords" content="{% block keywords %}power, influence, south africa, politics,
+      corruption, connectedafrica, conflicts of interest, illicit ties, pretoria, cape town
+      {% endblock %}">
     <meta name="author" content="Institute for Security Studies, Code for Africa, ANCIR">
 
     <meta name="og:site_name" content="{{APP_NAME}}">
 
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
-    {% assets filters="less,cssmin,cssrewrite", output="style.css",
+    {% assets filters="less,cssmin,cssrewrite", output="vendor.css",
+        "style/vendor.less"
+    %}
+      <link type="text/css" href="{{ ASSET_URL }}" rel="stylesheet">
+    {% endassets %}
+    {% assets filters="less,cssmin,cssrewrite", output="app.css",
         "style/style.less"
     %}
       <link type="text/css" href="{{ ASSET_URL }}" rel="stylesheet">
     {% endassets %}
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800,300' rel='stylesheet' type='text/css'>
 
     <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.png') }}">
   </head>
   <body>
     <div class="container-fluid">
-      <nav class="navbar navbar-default navbar-static-top" role="navigation">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-menu">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">{{APP_NAME}}</a>
-        </div>
-        <div class="collapse navbar-collapse" id="main-menu">
-          <ul class="nav navbar-nav">
-            <li><a href="{{url_for('base.page', path='themes')}}">Themes</a></li>
-            <li><a href="{{url_for('browser.view')}}">Explore</a></li>
-            <li><a href="{{url_for('base.page', path='about')}}">About</a></li>
-          </ul>
-          <form class="navbar-form navbar-right navbar-search" role="search"
-                action="{{url_for('browser.view')}}">
-            <div class="form-group">
-              <div class="input-group">
-                <span class="input-group-addon"><i class="fa fa-search"></i></span>
-                <input type="text" name="q" class="form-control"
-                  value="{{query}}" placeholder="Search">
-              </div>
-            </div>
-          </form>
-        </div>
-      </nav>
+      {% include 'nav.html' %}
       {% block content %}{% endblock %}
     </div>
 
