--- a/connectedafrica/templates/layout.html
+++ b/connectedafrica/templates/layout.html
@@ -14,12 +14,12 @@
 
     <meta name="og:site_name" content="{{APP_NAME}}">
 
-    {% assets filters="less,cssmin,cssrewrite", output="vendor.css",
+    {% assets filters="less,cssmin,cssrewrite", output="gen/vendor.css",
         "style/vendor.less"
     %}
       <link type="text/css" href="{{ ASSET_URL }}" rel="stylesheet">
     {% endassets %}
-    {% assets filters="less,cssmin,cssrewrite", output="app.css",
+    {% assets filters="less,cssmin,cssrewrite", output="gen/app.css",
         "style/style.less"
     %}
       <link type="text/css" href="{{ ASSET_URL }}" rel="stylesheet">
@@ -36,7 +36,7 @@
     </div>
 
     {% include 'footer.html' %}
-    {% assets filters="uglifyjs", output="app.js",
+    {% assets filters="uglifyjs", output="gen/app.js",
           "vendor/jquery/dist/jquery.js",
           "vendor/bootstrap/js/collapse.js",
           "vendor/bootstrap/js/dropdown.js"
