--- a/connectedafrica/templates/browser.html
+++ b/connectedafrica/templates/browser.html
@@ -32,7 +32,7 @@
           <tr>
              <td>
                <a href="{{url_for('profile.view', id=result.id, slug=result.properties.name.value|slugify)}}">{{result.properties.name.value}}</a>
-               <span class="help-text">
+               <span class="snippet">
                   {{ result | snippet | truncate(60) }}
                </span>
              </td>
