--- a/connectedafrica/templates/layout.html
+++ b/connectedafrica/templates/layout.html
@@ -7,9 +7,7 @@
 
     <title>{% block title %}(Untitled){% endblock %} - {{APP_NAME}}</title>
     <meta name="description" content="{% block description %}{% endblock %}">
-    <meta name="keywords" content="{% block keywords %}power, influence, south africa, politics,
-      corruption, connectedafrica, conflicts of interest, illicit ties, pretoria, cape town
-      {% endblock %}">
+    <meta name="keywords" content="{% block keywords %}power, influence, south africa, politics, corruption, connectedafrica, conflicts of interest, illicit ties, pretoria, cape town{% endblock %}">
     <meta name="author" content="Institute for Security Studies, Code for Africa, ANCIR">
 
     <meta name="og:site_name" content="{{APP_NAME}}">
