--- a/connectedafrica/static/style/style.less
+++ b/connectedafrica/static/style/style.less
@@ -25,7 +25,7 @@ body {
 }
 
 .container-fluid {
-  background-color: @body-background;
+  background-color: @body-bg;
   //max-width: 1000px;
   padding: 2em;
   margin: 5% 10% 0 10%;
@@ -34,6 +34,10 @@ body {
 h1, h2, h3, h4 {
   font-weight: 800;
   text-transform: uppercase;
+
+  a {
+    text-decoration: none;
+  }
 }
 
 a, a:hover {
@@ -81,9 +85,9 @@ h3.teaser, .nav-tabs, .navbar, .list-group {
 // Header style
 
 .navbar.navbar-default {
-  background-color: @header-background;
-  border-bottom: 0px solid @light-gray;
-  color: @light-text-color;
+  background-color: @header-bg;
+  border-bottom: 0px solid @gray-light;
+  color: @gray-light;
 
   .navbar-brand {
     color: @theme-color;
@@ -97,7 +101,7 @@ h3.teaser, .nav-tabs, .navbar, .list-group {
 
 footer {
   margin-bottom: -1em;
-  color: @footer-foreground;
+  color: @footer-fg;
 
   .simple-links;
 
@@ -106,7 +110,7 @@ footer {
   }
 
   hr {
-    border-top: 1px solid @light-gray;
+    border-top: 1px solid @border-color;
   }
 
   p {
@@ -180,7 +184,7 @@ li.active a {
 .facets {
   li.active {
     a {
-      color: white;
+      color: @body-bg;
     }
   }
 }
@@ -190,7 +194,7 @@ li.active a {
 
 .jumbotron {
   background-color: @theme-color;
-  color: white;
+  color: @body-bg;
 
   h1 {
     text-transform: none;
@@ -227,38 +231,6 @@ li.active a {
     margin-bottom: 1em;
   }
 
-  .relations {
-    h3 {
-      margin-bottom: -10px;
-    }
-  }
-
-  .relation { 
-    m-argin-bottom: 20px;
-
-    a {
-      font-size: 16px;
-      font-weight: bold;
-
-      .fa {
-        color: @text-color;
-      }
-    }
-    .details {
-      margin: 4px 0 0 32px;
-      font-size: 14px;
-    }
-
-    .fa {
-      width: 16px;
-      display: inline-block;
-      text-align: center;
-    }
-
-    .fa-lg {
-      width: 32px;
-    }
-  }
 
   img.profile-image {
     margin-bottom: 0;
@@ -266,13 +238,6 @@ li.active a {
     margin-right: 2em;
     //.grayscale-image;
     border-radius: 50%;
-  }
-
-  #filters {
-    margin-bottom: 2em;
-  }
-
-  #bio {
   }
 
   #sources {
@@ -284,4 +249,49 @@ li.active a {
   }
 }
 
+// Relation listings
+
+.relations {
+  .section {
+    margin: 0 0 1em 0;
+
+    .section-heading {
+      color: @theme-color;
+      font-size: 1.2em;
+      font-weight: 800;
+      padding: 0em 0 0.5em 0;
+    }
+  }
+
+  .relation {
+    border-bottom: 1px solid @border-color;
+    background-color: lighten(@border-color, 20%);
+    margin: 0 0 0.5em 0;
+    padding: 0 0 0.5em 0;
+
+    a {
+      font-weight: 800;
+      text-decoration: none;
+    }
+
+    .details {
+      text-align: right;
+      font-size: 0.8em;
+      color: @gray-light;
+
+      a {
+        font-weight: normal;
+        color: @gray-light;
+      }
+
+      a:hover {
+        color: darken(@theme-color, 10%);
+      }
+    }
+
+    .other {
+      padding: 0 0 0.2em 0;
+    }
+  }
+}
 
