Refactor to single-schema entities.

--- a/connectedafrica/templates/browser.html
+++ b/connectedafrica/templates/browser.html
@@ -31,7 +31,8 @@
         {% for result in paginator.results.results %}
           <tr>
              <td>
-               <a href="{{url_for('profile.view', id=result.id, slug=result.properties.name.value|slugify)}}">{{result.properties.name.value}}</a>
+               <a href="{{url_for('profile.view', id=result.id, slug=result.properties.name.value|slugify)}}">
+                {{result.properties.name.value}}</a>
                <span class="snippet">
                   {{ result | snippet | truncate(60) }}
                </span>
