--- a/connectedafrica/templates/paginator.html
+++ b/connectedafrica/templates/paginator.html
@@ -1,20 +1,20 @@
-{% macro paginate(paginator) %}
-  {% if paginator.pages > 1 %}
+{% macro paginate(pager) %}
+  {% if pager.pages > 1 %}
     <div class="row">
       <div class="col-md-6 text-left">
         <ul class="pagination">
-          {% for page, url in paginator.links %}
-            {% if page == paginator.page %}
+          {% for page in pager.range %}
+            {% if page == pager.page %}
               <li class="active"><a>{{page}}</a></li>
             {% else %}
-              <li><a href="{{url}}">{{page}}</a></li>
+              <li><a href="{{pager.page_url(page)}}">{{page}}</a></li>
             {% endif %}
           {% endfor %}
         </ul>
       </div>
       <div class="col-md-6 text-right">
         <p>
-          Showing {{paginator.results.offset+1}} to {{paginator.results.offset+paginator.results.limit}} of {{paginator.results.total}}.
+          Showing {{pager.offset+1}} to {{pager.offset+pager.limit}} of {{pager | length}}.
         </p>
       </div>
     </div>
