fix pager count.

--- a/connectedafrica/templates/paginator.html
+++ b/connectedafrica/templates/paginator.html
@@ -14,7 +14,7 @@
       </div>
       <div class="col-md-6 text-right">
         <p>
-          Showing {{pager.offset+1}} to {{pager.offset+pager.limit}} of {{pager | length}}.
+          Showing {{pager.offset+1}} to {{pager.offset+pager.limit}} of {{pager.pages}}.
         </p>
       </div>
     </div>
